# ed-football-prediction-simulator

./: .gitignore  .pre-commit-config.yaml  README.md  config.yml  main.py  predict.py  pyproject.toml  requirements.txt  run_predictions.bat
.github/workflows/: ci.yml
outputs/: 2020-12-21_predictions_20201221223349.txt  2020-12-21_values_20201221223349.txt  2020-12-28_predictions_20201228143304.txt  2020-12-28_values_20201228143304.txt  predictions_20201221205435.txt  predictions_20201221210141.txt  predictions_20201221212457.txt  predictions_20201221215159.txt  predictions_20201221221952.txt  values_20201221205435.txt  values_20201221210141.txt  values_20201221212457.txt  values_20201221215159.txt  values_20201221221952.txt
scorecasts/: 2020-12-21.txt
src/: betfair.py  config.py  get_odds.py  logger.py  parsing.py  simulation.py
tests/: test_point_scoring.py
