[project]
name = "ed-football-prediction-simulator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "betfairlightweight>=2.23.2",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
